--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "prettier": "^3.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
