--- a/mysources-backend/package.json
+++ b/mysources-backend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mysources-backend",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "nanoid": "^5.0.3",
     "puppeteer": "^21.5.2"
   },
   "devDependencies": {
