--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "mysources",
+  "name": "sourcespls",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
     "flowbite-react": "^0.6.4",
     "postcss": "^8.4.31",
@@ -14,6 +11,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -21,8 +19,9 @@
     "prettier": "^3.1.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
