add supabase; first attempt at google login and production url

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,28 @@ FROM node:18
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci --omit=dev
+
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg \
+    ca-certificates \
+    procps \
+    libxss1 \
+    libnss3 \
+    fonts-liberation \
+    libfontconfig1 \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatspi2.0-0 \
+    libdrm2 \
+    libgbm1 \
+    libgtk-3-0 \
+    libx11-xcb1 \
+    libxtst6 \
+    xdg-utils \
+    --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY . .
 
 ENV NODE_ENV production
