--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.5",
     "autoprefixer": "^10.4.16",
     "flowbite-react": "^0.6.4",
     "postcss": "^8.4.31",
