--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "morgan": "~1.9.1",
     "nanoid": "^5.0.3",
     "puppeteer": "^21.5.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
   }
 }
