--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "sourcespls",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@supabase/supabase-js": "^2.38.5",
     "autoprefixer": "^10.4.16",
