--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,5 +1,6 @@
 server {
     listen       80;
+    listen  [::]:80;
     server_name  localhost;
 
     location / {
@@ -8,13 +9,8 @@ server {
         try_files $uri /index.html;
     }
 
-    location ~ \.js$ {
-        root /usr/share/nginx/html;
-        add_header Content-Type text/javascript;
-    }
-
-    location ~* \.(?:css|js|map|jpe?g|gif|png|svg|ico|html)$ {
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
