--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.5",
     "autoprefixer": "^10.4.16",
-    "flowbite-react": "^0.6.4",
+    "flowbite-react": "0.7.0-beta.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
